fix: battery position on mobile

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -88,14 +88,7 @@ h1 {
                 position: absolute;
                 top: 3px;
                 right: -1px;
-                transform: scale(.8);
-            }
-
-            svg {
-                fill: $screen-text;
-                position: absolute;
-                top: 0;
-                // transform: scale(.25) translate(115px, -98px);
+                transform: scale(.82);
             }
         }
 
@@ -128,6 +121,7 @@ h1 {
 
             &.d-flex {
                 display: flex;
+                margin-bottom: .25rem;
             }
 
             // Text infos
